RESOLVED FIXED168739
Crash if there's a mismatch between the WebKit used by the UI process and child processes respectively
https://bugs.webkit.org/show_bug.cgi?id=168739
Summary Crash if there's a mismatch between the WebKit used by the UI process and chi...
Anders Carlsson
Reported 2017-02-22 13:23:44 PST
Crash if there's a mismatch between the WebKit used by the UI process and child processes respectively
Attachments
Patch (6.05 KB, patch)
2017-02-22 13:29 PST, Anders Carlsson
ggaren: review+
Anders Carlsson
Comment 1 2017-02-22 13:29:49 PST
Geoffrey Garen
Comment 2 2017-02-22 13:32:53 PST
Comment on attachment 302431 [details] Patch r=me
Anders Carlsson
Comment 3 2017-02-22 13:51:57 PST
Note You need to log in before you can comment on or make changes to this bug.